# service_app

app1/client/: README.md  connectDb.go  go.mod  go.sum  main.go  metanode-service.md
app1/client/abi/: comptroller.json  daiDelegator.json
app1/client/command/: commands.go
app1/client/config/: conf.json  conf_dev_net.json  conf_dev_net_1.json  conf_test_net.json  config.go
app1/client/contracts/: bep20  blockdata  cake  callother  compound  compound2  comptroller  dai  delegate  delegator  egg  eventStaking  factory  jumpratemodel  marketplace  oracle  router  sar  setget  storage  test game  testevent  testpancakeswap  teststaking  transfer  wbnb  yyy
app1/client/controllers/: transaction_controller.go
app1/client/dataType/: validator.go
app1/client/database/: doc_2022-12-26_09-16-03.meta_findsdk.db
app1/client/frontend/: default_1.0.6.json  metanode.json
app1/client/metanode_desktop_0.0.2/: asset-manifest.json  index.html
app1/client/models/: header.go
app1/client/network/: handler.go
app1/client/public/: LOG
app1/client/readDB/: LOG
app1/client/transactionsDB/: transactionsDb.go
app1/client/utils/: result_transformer.go
app1/pkg/: go.mod  go.sum
app1/pkg/block/: block.go  confirmed_block.go  full_block.go
app1/pkg/bls/: bls.go  bls_test.go  key_pair.go  key_pair_test.go
app1/pkg/common/: command.go  common.go  connection_type.go  constant.go  utilities.go
app1/pkg/config/: config.go
app1/pkg/entry/: entry.go
app1/pkg/merkle_patricia_trie/: coverage.out  encoding.go  node.go  (+3 more)
app1/pkg/merkle_patricia_trie/c_version/c_merkle_patricia_trie/: CMakeLists.txt
app1/pkg/merkle_patricia_trie/c_version/c_merkle_patricia_trie/include/: merkle_trie.h  util.h
app1/pkg/merkle_patricia_trie/c_version/c_merkle_patricia_trie/src/: merkle_trie.cpp
(+394 files in other folders)
